# loro-py

./: .gitignore  Cargo.toml  README.md  loro.pyi  pyproject.toml
.github/workflows/: CI.yml  test.yml
example/: main.py
python/: loro.pyi
python/loro/: __init__.py
src/: awareness.rs  container.rs  convert.rs  doc.rs  err.rs  event.rs  lib.rs  undo.rs  value.rs  version.rs
src/container/: counter.rs  list.rs  map.rs  movable_list.rs  text.rs  tree.rs  unknown.rs  utils.rs
tests/: test_awareness.py  test_basic.py  test_counter.py  test_magic_methods.py  test_map.py  test_text.py  test_tree.py  test_undo.py
