[package]
name = "loro_py"
version = "1.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "loro"
crate-type = ["cdylib"]

[dependencies]
# loro = { path = "../loro/crates/loro", features = ["counter", "jsonpath"] }
loro = { version = "1.5.10", features = ["counter", "jsonpath"] }
fxhash = "0.2.1"
pyo3 = { version = "0.24.1" }
serde_json = "1"
