[package]
name = "loro_py"
version = "1.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "loro"
crate-type = ["cdylib"]

[dependencies]
loro = { version = "1.8.1", features = ["counter", "jsonpath"] }
rustc-hash = "2.1.1"
pyo3 = { version = "0.26.0" }
serde_json = "1"
