[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "loro"
authors = [{ name = "leon7hao", email = "lz@loro.dev" }]
description = "Python bindings for [Loro](https://loro.dev)"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["local-first", "CRDT", "loro"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://loro.dev"
Repository = "https://github.com/loro-dev/loro-py"

[tool.maturin]
features = ["pyo3/extension-module"]
